Added display settings

--- a/displayplacer.conf
+++ b/displayplacer.conf
@@ -1,3 +1,1 @@
-# Paste output from: displayplacer list
-# Example (single line):
-# id:YOUR_DISPLAY_ID res:2560x1440 hz:60 scaling:on origin:(0,0) degree:0
+id:EC777605-964B-4355-8167-D776AFC4C93B res:3360x1890 hz:60 color_depth:8 enabled:true scaling:on origin:(0,0) degree:0
