Add programs and defaults

--- a/dotfiles/git/.gitconfig
+++ b/dotfiles/git/.gitconfig
@@ -1,8 +1,8 @@
 [user]
-	name = Your Name
-	email = you@example.com
+	name = Oliver Hertzman Kraft
+	email = Oliver@oliverkraft.io
 [init]
-	defaultBranch = main
+	defaultBranch = master
 [color]
 	ui = auto
 [push]
