--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 defaults-export/
 .defaults-snapshots/
 Brewfile.lock.json
-dotfiles/vscode/Library/Application Support/Code/User/*
-!dotfiles/vscode/Library/Application Support/Code/User/settings.json
+dotfiles/vscode/Library/Application\ Support/Code/*
+!dotfiles/vscode/Library/Application\ Support/Code/User/
+dotfiles/vscode/Library/Application\ Support/Code/User/*
+!dotfiles/vscode/Library/Application\ Support/Code/User/settings.json
